testsuite/tests/semantic_errors/invalid_argument/test.adb
procedure Test is
   procedure Foo (X : Integer) is null;
begin
   Foo (True);
   pragma Test_Statement;
end Test;
